--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-# myproject
+<!DOCTYPE html>
+<head>
+<title>Задание1</title>
+</head>
+<body>
+<a href="http:/myproject/about/aboutme.html">checkab</a>
+<a href="myproject/about/aboutme.html">checkpr</a> 
+</body>
