--- a/about/aboutme.html
+++ b/about/aboutme.html
@@ -1,1 +1,8 @@
-
+<!DOCTYPE html>
+<head>
+<title>Задание1</title>
+</head>
+<body>
+<a href="http:/myproject/index.html">checkab</a>
+<a href="myproject/index.html">checkpr</a> 
+</body>
